examples/errors/parsing/if-no-cond.cn
main : () [impure] =
  if then 1 else 2
